[package]
name = "mq-surreal"
version = "0.9.0"
edition = "2021"
authors = ["Prabir Shrestha <mail@prabir.me>"]
license = "MIT"
description = "Simple Message Queue for SurrealDB"
repository = "https://github.com/prabirshrestha/mq"
keywords = ["job", "scheduler", "queue"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
mq = { "path" = "../mq", version = "0.9.0" }
serde_json = "1.0.110"
surrealdb = "1.0.2"
time = { version = "0.3.31", features = ["std", "serde"] }
