[package]
name = "mq"
version = "0.9.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2021"
license = "MIT"
description = "Simple Message Queue"
repository = "https://github.com/prabirshrestha/mq"
keywords = ["job", "scheduler", "queue"]

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
serde_with = "3.6.1"
thiserror = "1.0.57"
time = { version = "0.3.34", features = ["std", "serde", "parsing", "formatting"] }
tokio = { version = "1.36.0", features = ["macros", "time"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
xid = "1.0.3"
