[package]
name = "mq"
version = "0.9.0"
authors = ["Prabir Shrestha <mail@prabir.me>"]
edition = "2021"
license = "MIT"
description = "Simple Message Queue"
repository = "https://github.com/prabirshrestha/mq"
keywords = ["job", "scheduler", "queue"]

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
serde = { version = "1.0.198", features = ["serde_derive"] }
serde_json = "1.0.116"
serde_with = "3.7.0"
thiserror = "1.0.59"
time = { version = "0.3.36", features = ["std", "serde", "parsing", "formatting"] }
tokio = { version = "1.36.0", features = ["macros", "time"] }
tokio-util = "0.7.10"
tracing = "0.1.40"
xid = "1.1.1"
